[tool.poetry]
name = "friday"
version = "0.1.0"
description = "Python translator to brighten up dump sensor"
license = "Unlicense"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
