[tool.poetry]
name = "friday"
version = "0.1.0"
description = "Python translator to brighten up dump sensor"
license = "Unlicense"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
flake8 = "^3.7.9"
paho-mqtt = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
pytest = "^5.3.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
